Inline comment for abstracting common parts across pages into application.html.erb

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,5 @@
+<%# executes ruby code %>
+<%# provide function defines :title content block to have value "Home" %>
 <% provide(:title, "Home") %>
 <h1>Sample App</h1>
 <p>
