--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+<%# layout file for all pages %>
 <!DOCTYPE html>
 <html>
   <head>
@@ -10,6 +11,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   </head>
 
+  <%# insert content of each individual view in body%>
   <body>
     <%= yield %>
   </body>
