Add timestamps to user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,9 @@
         <%= gravatar_for @user %>
         <%= @user.name %>
       </h1>
+      <%= "Current Time: #{Time.now}"  %>
+      <%= "Created At: #{@user.created_at}"  %>
+      <%= "Updated At: #{@user.updated_at}"  %>
     </section>
   </aside>
 </div>
